--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="CSS/styles-old.css" />
+    <link rel="stylesheet" href="CSS/styles.css" />
     <title>Ristorante Con Fusion</title>
 </head>
 
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal"><span class="fa fa-sign-in"></span>Login</a>
+                    <a id="logjq"><span class="fa fa-sign-in"></span>Login</a>
                 </span>
             </div>
         </div>
@@ -119,7 +119,7 @@
                         <div class="form-group row">
                             <label class="col-12 col-md-2 col-form-label">Section</label>
                             <div class="col-md col-12 btn-group btn-group-toggle" data-toggle="buttons">
-                                <label class="btn btn-success">
+                                <label class="btn btn-success active">
                                     <input type="radio" name="section" id="nonsmoke" />Non-smoking
                                 </label>
                                 <label class="btn btn-danger">
@@ -160,7 +160,7 @@
                     <img src="img/logo.png" class="img-fluid" />
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal" data-target="#rest" href="#rest">Reserve Table</a>
+                    <a role="button" class="btn btn-block nav-link btn-warning" id="resjq">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -314,6 +314,12 @@
                         $('#carouselButton').children('span').removeClass('fa-play');
                         $('#carouselButton').children('span').addClass('fa-pause');
                     }
+                });
+                $('#logjq').click(function () {
+                    $('#loginModal').modal('show');
+                });
+                $('#resjq').click(function () {
+                    $('#rest').modal('show');
                 });
             });
         </script>
